--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,3 +47,37 @@
     background-color: #36393B;
     color: white;
 }
+.title-screen {
+    text-align: center;
+}
+.title-screen h1 {
+    font-size: 10em;
+}
+
+table.qrcode {
+    border-width: 0;
+    border-style: none;
+    border-color: #0000ff;
+    border-collapse: collapse;
+    margin-top: 100px;
+    margin-bottom: 12px;
+  
+    td {
+      border-width: 0;
+      border-style: none;
+      border-color: #0000ff;
+      border-collapse: collapse;
+      padding: 0;
+      margin: 0;
+      width: 3px;
+      height: 3px;
+  
+      &.black {
+        background-color: #000 !important
+      }
+  
+      &.white {
+        background-color: #fff !important
+      }
+    }
+  }
