--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 </p>
 
-<%= render_qr_code(url_for(game_cypher_path(@game.id))) %>
+<%= render_qr_code(url_for(game_cypher_url(@game.id))) %>
 
 <%= link_to 'View Cypher', game_cypher_path(@game.id), target: "_blank" %>
 
